tests/baselines/reference/scannerNumericLiteral6.errors.txt
scannerNumericLiteral6.ts(1,4): error TS1124: Digit expected.


==== scannerNumericLiteral6.ts (1 errors) ====
    1e+
       
!!! error TS1124: Digit expected.